add get messages, post (no message reception, no router, no domain name)
